crud Scales
